GO 37: User setup two-factor authentication
